# Compiler

./: CMakeLists.txt  Makefile  README.md  algorithm.txt  compiler.cpp  compiler.h  main.cpp  natural_language.cpp  natural_language.h  old-backup  test_expressions.txt
